changed travis file build on master branch only

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 sudo: required
+# blocklist
+branches:
+  except:
+  - feature
+
+# safelist
+branches:
+  only:
+  - master
+
 services:
   - docker
 
